2000-06-01  Pekka Nikander  <pnr@teldanex.tcm.hut.fi>
       * Makefile.in: Use $(MAKE) not "make"


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34376 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-02  Pekka Nikander  <pnr@teldanex.tcm.hut.fi>
+
+	* Makefile.in: Use $(MAKE) not "make"
+
 Fri Jun  2 19:31:03 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* alias.c (struct alias_set_entry): New field has_zero_child.
