* gcc.c-torture/execute/20000603-1.c: New.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34379 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-03  Richard Henderson  <rth@cygnus.com>
+
+	* gcc.c-torture/execute/20000603-1.c: New.
+
 2000-06-02  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* gcc.dg/noreturn-1.c (foo7, foo8): Revert previous change.
