--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-03  Richard Henderson  <rth@cygnus.com>
+
+	* alias.c (record_alias_subset): Initialize has_zero_child in the
+	superset.
+
 2000-06-03  Richard Earnshaw (rearnsha@arm.com)
 
 	* arm.md (untyped_call): Use GEN_CALL macro.
