* toplev.c (main): Fix misspellings of possibility and language.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34381 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jun  3 15:26:13 2000  Matt Kraai <kraai@alumni.carnegiemellon.edu>
+
+	* toplev.c (main): Fix misspellings of possibility and language.
+
 2000-06-03  Richard Henderson  <rth@cygnus.com>
 
 	* alias.c (record_alias_subset): Initialize has_zero_child in the
