* chill.texi (INFO-DIR-ENTRY): Fix chill entry.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34382 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ch/ChangeLog
+++ b/gcc/ch/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jun  3 15:31:07 2000  Jeffrey A Law  (law@cygnus.com)
+
+	* chill.texi (INFO-DIR-ENTRY): Fix chill entry.
+
 2000-06-02  Richard Henderson  <rth@cygnus.com>
 
 	* lang.c (lang_get_alias_set): New.
