--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-03  David Billinghurst  <David Billinghurst@riotinto.com.au>
+
+        * g77.f-torture/compile/20000601-1.f:  New test.
+
 2000-06-03  Richard Henderson  <rth@cygnus.com>
 
 	* gcc.c-torture/execute/20000603-1.c: New.
