--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,7 +1,7 @@
 Sat Jun  3 19:05:30 2000  Michael Meissner  <meissner@redhat.com>
 
-	* ifcvt (process_insns): If IFCVT_MODIFY_INSN is defined, call it
-	with the pattern to do machine dependent work.
+	* ifcvt.c (process_insns): If IFCVT_MODIFY_INSN is defined, call
+	it with the pattern to do machine dependent work.
 	(cond_exec_process_if_block): If IFCVT_MODIFY_TESTS is defined,
 	use it to modify the true/false tests used in conditional
 	execution.  If IFCVT_MODIFY_FINAL and IFCVT_MODIFY_CANCEL are
