* newcvsroot: Handle filenames that contain spaces.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34391 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-04  Mark Mitchell  <mark@codesourcery.com>
+
+	* newcvsroot: Handle filenames that contain spaces.
+
 2000-06-03  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* test_summary: In generated script, use cat <<'EOF' not cat <<\EOF.
