--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,66 +1,78 @@
-2000-06-03  Mark Mitchell  <mark@codesourcery.com>
+2000-06-03  Alex Samuel    <samuel@codesourcery.com>
+	    Mark Mitchell  <mark@codesourcery.com>
 
-	* cp-tree.h (TMPL_ARGS_LEVEL): Clarify comment.
-	(INNERMOST_TEMPLATE_ARGS): New macro.
-	(innermost_args): Remove.
-	(get_innermost_template_args): New function.
-	* decl2.c (arg_assoc_class): Use INNERMOST_TEMPLATE_ARGS.
-	* error.c (dump_function_decl): Be caution when using
-	most_general_template.
-	* method.c (build_template_parm_names):  Use
-	INNERMOST_TEMPLATE_ARGS.
-	* pt.c (add_to_template_args): Tidy comment
-	(get_innermost_template_args): New function.
-	(check_explicit_specialization): Clear DECL_INITIAL for a new
-	specialization.
-	(process_partial_specialization): Use INNERMOST_TEMPLATE_ARGS.
-	Tidy.
-	(push_template_decl): Always register specializations of the most
-	general template.
-	(convert_template_argument): Use INNERMOST_TEMPLATE_ARGS.
-	(coerce_template_parms): Likewise.
-	(lookup_template_class): Likewise.
-	(innermost_args): Remove.
-	(tsubst_decl): Use INNERMOST_TEMPLATE_ARGS.
-	(tsubst_decl): Handle tricky specializations.  Use
-	get_innermost_template_args.
-	(instantiate_template): Simplify handling of partial
-	instantiations.
-	(get_class_bindings): Use INNERMOST_TEMPLATE_ARGS.
-	(most_general_template): Reimplement, in a more straightforward
-	manner.
-	(regenerate_decl_from_template): Tweak formatting.  Use
-	TMPL_ARGS_DEPTH for clarity.
-	(set_mangled_name_for_template_decl): Use INNERMOST_ARGS.
+	* Make-lang.in (CXX_SRCS): Add mangle.c.
+	* Makefile.in (CXX_OBJS): Add mangle.o.
+	(mangle.o): New rule.
+
+	* class.c (local_classes): New variable.
+	* class.c (get_vtable_name): Use mangle_vtable_for_type for new ABI.
+	(get_vtt_name): Use mangle_vtt_name for new ABI.
+	(init_class_processing): Initialize local_classes.
+	(build_ctor_vtbl_group): Use mangle_ctor_vtbl_for_type for new ABI.
+	* cp-tree.h (cp_tree_index): Add CPTI_STD_IDENTIFIER.
+	(std_identifier): New macro.
+	(DECL_VOLATILE_MEMFUNC_P): New macro.
+	(DECL_NAMESPACE_STD_P): Likewise.
+	(local_classes): Declare.
+	(get_mostly_instantiated_function_type): Declare.
+	(init_mangle): Declare.
+	(mangle_decl): Likewise.
+	(mangle_type_string): Likewise.
+	(mangle_type): Likewise.
+	(mangle_typeinfo_for_type): Likewise.
+	(mangle_typeinfo_string_for_type): Likewise.
+	(mangle_vtbl_for_type): Likewise.
+	(mangle_vtt_for_type): Likewise.
+	(mangle_ctor_vtbl_for_type): Likewise.
+	(mangle_thunk): Likewise.
+	(mangle_conv_op_name_for_type): Likewise.
+	(mangle_guard_variable): Likewise.
+	* decl.c (pushtag): Keep track of local classes.
+	(initialize_predefined_identifiers): Initialize std_identifier.
+	(init_decl_processing): Use std_identifier.
+	(start_decl): Don't treat instantiations as specializations.
+	(grokdeclarator): Likewise.
+	(grokvardecl): Call mangle_decl for new ABI.  Only set mangled
+	name for fully-instantiated templates.
+	* decl2.c (grokclassfn): Use set_mangled_name_for_decl for
+	destructors with the new ABI.	
+	(finish_static_data_member_decl): Use mangle_decl under the new ABI.
+	(grokfield): Use mangle_type for new ABI.
+	(grokoptypename): Use mangle_conv_op_for_type for new ABI.
+	(get_sentry): Use mangle_guard_variable for new ABI.
+	(start_static_initialization_or_destruction): Likewise.
+	* expr.c (extract_aggr_init): Remove.
+	(extract_scalar_init): Likewise.
+	(extract_init): Remove #if 0'd code.
+	* mangle.c: New function.
+	* method.c (build_mangled_name): Assert not flag_new_abi.
+	(build_static_name): Likewise.
+	(build_decl_overload_real): Likewise.
+	(build_typename_overload): Likewise.
+	(build_overload_with_type): Likewise.
+	(build_overload_name): Likewise.
+	(get_ctor_vtbl_name): Likewise.
+	(start_squangling): Likewise.
+	(get_id_2): Likewise.
+	(set_mangled_name_for_decl): Call mangle_decl for new ABI.
+	(init_method): Call init_mangle for new ABI.
+	(make_thunk): Call mangle_thunk for new ABI.
+	* operators.def: Correct new ABI manglings for the `%' operator.
+	Add `::' operator.
+	* pt.c (build_template_decl): Copy DECL_OVERLOADED_OPERATOR_P and
+	DECL_ASSIGNMENT_OPERATOR_P to the TEMPLATE_DECL.
+	(lookup_template_class): Call mangle_decl for new ABI.
+	(get_mostly_instantiated_function_type): New function.
+	(set_mangled_name_for_template_decl): Use it.
+	(tsubst_decl): Use set_mangled_name_for_decl for destructors with
+	the new ABI.  Use mangle_conv_op_name_for_type for instantiated
+	conversion op names.
+	* rtti.c (tinfo_name): Call mangle_type_string for new ABI.
+	(get_tinfo_decl): Call mangle_typeinfo_for_type for new	ABI.
+	(tinfo_base_init):  Likewise.  Mangle typeinfo string name with
+	mangle_typeinfo_string_for_type.
 	
-	* dump.c (dequeue_and_dump): Dump information about thunks.
-
-2000-06-02  Jason Merrill  <jason@casey.soma.redhat.com>
-
-	* exception.cc (__cp_pop_exception): If we aren't popping or
-	rethrowing, push down past any uncaught exceptions.
-	(__uncatch_exception): Rethrow the currently handled exception.
-	Move it to the top of the exception stack.
-
-Fri Jun  2 19:38:57 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
-
-	* cp-tree.h: Use struct tree_common instead of a char array.
-	* decl.c (grokdeclarator): Set DECL_NONADDRESSABLE_P instead
-	of TREE_ADDRESSABLE.
-
-2000-06-02  Richard Henderson  <rth@cygnus.com>
-
-	* decl.c (init_decl_processing): Don't set lang_get_alias_set.
-
-2000-06-02  Jason Merrill  <jason@casey.soma.redhat.com>
-
-	* decl.c (store_return_init): Call put_var_into_stack.
-
-2000-06-01  Mark Mitchell  <mark@codesourcery.com>
-
-	* cp-tree.h (lang_decl_flags): Add anticipated_p.
-	(DECL_ANTICIPATED): Use it.
-
 2000-06-01  Richard Henderson  <rth@cygnus.com>
 
 	* decl.c (init_decl_processing): Set lang_get_alias_set first thing.
