--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jun  5 06:48:55 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* decl.c (init_decl_processing): Don't call record_component_aliases.
+	* tree.c (build_cplus_array_type_1): Likewise.
+
 2000-06-04  Mark Mitchell  <mark@codesourcery.com>
 
 	* ir.texi: Correct typo.
