* class.c (indirect_primary_base_p): New function. 	(determine_primary_base): Use it.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34412 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-05  Mark Mitchell  <mark@codesourcery.com>
+
+	* class.c (indirect_primary_base_p): New function.
+	(determine_primary_base): Use it.
+
 2000-06-05  Nathan Sidwell  <nathan@codesourcery.com>
 
 	Update new-abi dynamic cast algorithm.
