--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,14 @@
 2000-06-05  Jason Merrill  <jason@casey.soma.redhat.com>
 
+	* Makefile.in (libgcc.ready): Lose.
+	(libgcc.mk): Just use mv, not move-if-change.
+	(LIBGCC_DEPS): New macro.
+	(libgcc.a): Use it.
+	(stmp-multilib): Likewise.
+	* mklibgcc.in (stmp-dirs): New target.  Make everything depend on
+	it rather than the directories themselves.
+	(LIB2ADD): Depend on the list file rather than 'force'.
+
 	* fold-const.c (fold, case COND_EXPR): Elide conversion between
 	cv-qualified versions of types.
 
