* reload1.c (choose_reload_regs): Mind CLASS_CANNOT_CHANGE_SIZE         while looking for a register to inherit from.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34420 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-05  Richard Henderson  <rth@cygnus.com>
+
+	* reload1.c (choose_reload_regs): Mind CLASS_CANNOT_CHANGE_SIZE
+	while looking for a register to inherit from.
+
 2000-06-05  Jason Merrill  <jason@casey.soma.redhat.com>
 
 	* Makefile.in (libgcc.ready): Lose.
