--- a/gcc/po/ChangeLog
+++ b/gcc/po/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-06  Philipp Thomas  <pthomas@suse.de>
+
+	* Makefile.in.in: Add --define switch for xgettext.
+
 2000-05-30  Philipp Thomas  <pthomas@suse.de>
 
 	* Makefile.in.in: Create compiled catalogs in objdir, not
