* expr.c (store_expr): Fix typo.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34428 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-06  Jason Merrill  <jason@casey.soma.redhat.com>
+
+	* expr.c (store_expr): Fix typo.
+
 2000-06-06  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* m68k.c (legitimize_pic_address): Move prototype ...
