--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-06  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* exception.cc: (__eh_alloc, __eh_free): Moved to libgcc2.c
+
 2000-06-05  Jason Merrill  <jason@casey.soma.redhat.com>
 
 	* search.c (maybe_suppress_debug_info): Don't check
