--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-06  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.old-deja/g++.eh/badalloc1.C: New test.
+
 2000-06-05  Richard Henderson  <rth@cygnus.com>
 
 	* gcc.c-torture/execute/20000605-1.c: New test.
