--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-06  David Billinghurst  <David Billinghurst@riotinto.com.au>
+
+	* g77.f-torture/execute/20000503-1.x: New file.
+
 2000-06-06  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.old-deja/g++.eh/badalloc1.C: New test.
