2000-06-06  Mark Mitchell  <mark@codesourcery.com>
	* decl.c (redeclaration_error_message): If two TEMPLATE_DECLs have
	the same DECL_RESULT, it's not a redefinition.
	* pt.c (tsubst_decl): Remove code to handle illegal
	specializations.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34434 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2000-06-06  Mark Mitchell  <mark@codesourcery.com>
+
+	* decl.c (redeclaration_error_message): If two TEMPLATE_DECLs have
+	the same DECL_RESULT, it's not a redefinition.
+	* pt.c (tsubst_decl): Remove code to handle illegal
+	specializations.
+
 2000-06-06  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* exception.cc: (__eh_alloc, __eh_free): Moved to libgcc2.c
