--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-05  Richard Henderson  <rth@cygnus.com>
+
+	* gcc.c-torture/execute/20000605-2.c: New test.
+	* gcc.c-torture/execute/20000605-3.c: New test.
+
 2000-06-06  David Billinghurst  <David Billinghurst@riotinto.com.au>
 
 	* g77.f-torture/execute/20000503-1.x: New file.
