--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-06  Mark Mitchell  <mark@codesourcery.com>
+
+	* decl2.c (c_language): Define.
+
 2000-06-06  Gabriel Dos Reis  <gdr@codesourcery.com>
 
 	* lex.c (lang_init_options): Tweak.
