* decl.c (pushdecl): Look up functions by DECL_NAME, not 	DECL_ASSEMBLER_NAME.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34443 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-07  Mark Mitchell  <mark@codesourcery.com>
+
+	* decl.c (pushdecl): Look up functions by DECL_NAME, not
+	DECL_ASSEMBLER_NAME.
+
 2000-06-06  Mark Mitchell  <mark@codesourcery.com>
 
 	* decl2.c (c_language): Define.
