* POTFILES.in: Remove dyn-string.[ch]. 	* gcc.pot: Regenerated. 	* cat-id-tbl.c: Ditto.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34444 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/po/ChangeLog
+++ b/gcc/po/ChangeLog
@@ -1,3 +1,9 @@
+2000-06-07  Philipp Thomas  <pthomas@suse.de>
+
+	* POTFILES.in: Remove dyn-string.[ch].
+	* gcc.pot: Regenerated.
+	* cat-id-tbl.c: Ditto.
+
 2000-06-06  Philipp Thomas  <pthomas@suse.de>
 
 	* Makefile.in.in: Add --define switch for xgettext.
