* frame.c (end_fde_sort): Remove extraneous erratic array test.
	* frame.c (start_fde_sort): Don't malloc (0).


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34452 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2000-06-08  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* frame.c (end_fde_sort): Remove extraneous erratic array test.
+
+2000-06-08  Denis Perchine <dyp@perchine.com>
+
+	* frame.c (start_fde_sort): Don't malloc (0).
+
 2000-06-07  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* c-decl.c (pushdecl): Do not call COMPLETE_TYPE_P on
